Issue #928 fix: delete pair alignment

--- a/org.ekstep.questionunit.mtf-1.0/editor/styles/style.css
+++ b/org.ekstep.questionunit.mtf-1.0/editor/styles/style.css
@@ -191,7 +191,6 @@ td.mtf-pair-td{
 }
 .delete-pair-row-LHS{
   margin-top: 2%;
-      width: 23%;
 }
 .delete-pair-row-RHS{
   margin-top: 2%;
